bootstrap, logo, iconos, css y mejoras

--- a/stats-glow-mind/angular.json
+++ b/stats-glow-mind/angular.json
@@ -21,11 +21,12 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/medusa.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -86,7 +87,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
+              "src/medusa.ico",
               "src/assets"
             ],
             "styles": [
