actualización hosting, nuevos componentes, clasificación NBA y actualización css

--- a/stats-glow-mind/firebase.json
+++ b/stats-glow-mind/firebase.json
@@ -1,9 +1,16 @@
 {
-  "hosting": [
-    {
-      "target": "stats-glow-mind",
-      "source": ".",
-      "frameworksBackend": {}
-    }
-  ]
+  "hosting": {
+    "public": "dist/stats-glow-mind/browser",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
