--- a/stats-glow-mind/package.json
+++ b/stats-glow-mind/package.json
@@ -10,25 +10,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/animations": "^17.2.3",
+    "@angular/common": "^17.2.3",
+    "@angular/compiler": "^17.2.3",
+    "@angular/core": "^17.2.3",
     "@angular/fire": "17.0.1",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/forms": "^17.2.3",
+    "@angular/platform-browser": "^17.2.3",
+    "@angular/platform-browser-dynamic": "^17.2.3",
+    "@angular/router": "^17.2.3",
     "bootstrap": "^5.3.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.2",
+    "firebase": "9.6.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.1",
     "@angular/cli": "^17.0.1",
-    "@angular/compiler-cli": "^17.0.0",
+    "@angular/compiler-cli": "^17.2.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
