--- a/stats-glow-mind/.gitignore
+++ b/stats-glow-mind/.gitignore
@@ -48,8 +48,7 @@ Thumbs.db
 
 
 # Configuración Firebase
-./src/environments/environment.ts
-./src/environments/environment.development.ts
+/src/environments/
 
 # API Key
-./src/app/keys/keys.ts
+/src/app/keys/
