implementacion de gráficas de chart.js

--- a/stats-glow-mind/package.json
+++ b/stats-glow-mind/package.json
@@ -24,6 +24,7 @@
     "@firebase/firestore": "^4.5.0",
     "@firebase/firestore-compat": "^0.3.27",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "firebase": "^10.9.0",
     "ngx-toastr": "^18.0.0",
     "rxfire": "^6.0.5",
