--- a/stats-glow-mind/package.json
+++ b/stats-glow-mind/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^17.2.3",
     "@firebase/firestore": "^4.5.0",
     "@firebase/firestore-compat": "^0.3.27",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
     "firebase": "^10.9.0",
