modificación de traducción y requisitos

--- a/stats-glow-mind/functions/requirements.txt
+++ b/stats-glow-mind/functions/requirements.txt
@@ -1,5 +1,7 @@
-firebase-admin
-firebase-functions
-pandas
-scikit-learn
-google-cloud-storage
+firebase-admin==6.5.0
+firebase-functions==0.4.1
+pandas==2.2.2
+scikit-learn==1.4.2
+google-cloud-storage==2.16.0
+flask==3.0.3
+flask-cors==4.0.1
